# ProgressBar

./: Bar  CMakeLists.txt  DialogBox.cpp  DialogBox.h  FileTransfer.cpp  FileTransfer.h  Observer.h  OverallProgress.cpp  OverallProgress.h  ProgressBar.cpp  ProgressBar.h  README.md  SingleProgress.cpp  SingleProgress.h  Subject.h  Text.cpp  Text.h  main.cpp
cmake_modules/: FindSFML.cmake
test/: CMakeLists.txt  FileTransferTest.cpp  ProgressBarTest.cpp
test/testSource/testInside/: Algoritmi.txt  Analisi 1.txt  Analisi 2.txt  Physics.txt
